update_phimcontroller
