# storage/api-docs/api-docs.json
@@ -502,7 +502,7 @@
                     {
                         "name": "key_word",
                         "in": "query",
-                        "description": "Find admin by keyword (ten_phim | dien_vien)",
+                        "description": "Find admin by keyword (ten_phim | ten_dien_vien |dao_dien | ten_quoc_gia | kieu_phim)",
                         "schema": {
                             "type": "string"
                         }
@@ -585,31 +585,6 @@
                 "responses": {
                     "200": {
                         "description": "OK"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "500": {
-                        "description": "Error server"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/nguoi-dung/test": {
-            "get": {
-                "tags": [
-                    "Người Dùng"
-                ],
-                "summary": "Test",
-                "operationId": "soLuongNguoiTruyCap",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -820,7 +795,7 @@
                     }
                 ]
             },
-            "post": {
+            "put": {
                 "tags": [
                     "Phim"
                 ],
